# GAMES102

homeworks/hw1/: Homework 1.ipynb  hw1.py  interpolation_polynomial.py  regression.py
homeworks/hw1/.ipynb_checkpoints/: Homework 1-checkpoint.ipynb
homeworks/hw2/: Building_your_Deep_Neural_Network_Step_by_Step.ipynb  Homework 2.ipynb
homeworks/hw2/.ipynb_checkpoints/: Building_your_Deep_Neural_Network_Step_by_Step-checkpoint.ipynb  Homework 2-checkpoint.ipynb
homeworks/hw3/: README.md
homeworks/hw3/.ipynb_checkpoints/: Homework 3-checkpoint.ipynb
homeworks/hw3/优秀代码/152_Tan_Morgan_HW3/: CMakeLists.txt
homeworks/hw3/优秀代码/152_Tan_Morgan_HW3/Components/: CanvasData.h
homeworks/hw3/优秀代码/152_Tan_Morgan_HW3/Components/details/: CanvasData_AutoRefl.inl
homeworks/hw3/优秀代码/152_Tan_Morgan_HW3/Systems/: CanvasSystem.cpp  CanvasSystem.h
homeworks/hw3/优秀代码/180_陈昱文_HW3/: report.md
homeworks/hw3/优秀代码/180_陈昱文_HW3/src/: CMakeLists.txt
homeworks/hw3/优秀代码/269_彭博_HW3/src/hw3/Components/: CanvasData.h
homeworks/hw3/优秀代码/269_彭博_HW3/src/hw3/Systems/: CanvasSystem.cpp
homeworks/util/: interpolation_gaussian.py  regression.py  util.py
